--- a/Serializer/Serializer.csproj
+++ b/Serializer/Serializer.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Files\Test.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Files\Test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
